feat: Java23 FFM module w/o JNA
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>